@@ -1,0 +1,7 @@
+#Dev settings in nodemon.json
+
+#Port
+PORT=
+
+#Db
+MONGODB_URL=
