@@ -20,7 +20,9 @@
   "homepage": "https://github.com/hikimory/react-node-ecommerce#readme",
   "dependencies": {
     "concurrently": "^5.3.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
